Fixed the company name and city name misspelling.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="elektrikar, elektroinstalace, ostrava, elektrika" />
+  <meta name="keywords" content="elektrikar, elektroinstalace, Ostrava, elektrika" />
   <meta name="robots" content="index, follow" />
   <meta name="description"
     content="Elektrikář - Ostrava : domovní a bytové elektroinstalace, domovní telefony, elektromontáže, elektropráce, el. zabezpečovací systémy" />
   <meta name="author" content="Špánik, Potseluiko" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title>Elektrikář-ostrava</title>
+  <title>Elektrikář-Ostrava</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -47,7 +47,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand " href="index.html"> Elektrikář-ostrava </a>
+          <a class="navbar-brand " href="index.html"> Elektrikář-Ostrava </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,11 +85,10 @@
 
       <div class="detail-box">
         <h1>
-          Dušan Špánik <br>
-          Elektroinstalace
+          Elektrikář-Ostrava
         </h1>
         <p>
-          Elektroinstalace podle Vašich představ !
+          Elektroinstalace podle Vašich představ!
         </p>
         <div class="btn-box">
           <a href="kontakt.html" class="btn1">
@@ -147,8 +146,7 @@
           Naše služby
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you
-          are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+          Na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením
         </p>
       </div>
       <div class="service_container">
@@ -276,7 +274,7 @@
           <div class="col-lg-4 col-md-6">
             <a href="index.html">
               <p class="navbar-brand">
-                Elektrikář-ostrava
+                Elektrikář-Ostrava
               </p>
             </a>
           </div>
