--- a/sluzby.html
+++ b/sluzby.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title>Elektrikář-ostrava</title>
+  <title>Elektrikář-Ostrava</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -42,7 +42,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand " href="index.html"> Elektrikář-ostrava </a>
+          <a class="navbar-brand " href="index.html"> Elektrikář-Ostrava </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
@@ -203,7 +203,7 @@
           <div class="col-lg-4 col-md-6">
             <a href="index.html">
               <p class="navbar-brand">
-                Elektrikář-ostrava
+                Elektrikář-Ostrava
               </p>
             </a>
           </div>
