Fixed the prices page.

--- a/cenik.html
+++ b/cenik.html
@@ -85,94 +85,45 @@
           Ceník
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-        </p>
+          Jednotlivé zakázky jsou naceňovány individuálně podle rozsahu provedených prací, použitých materiálů a požadavků zákazníka. Cenovou nabídku vypracujeme nazávazně a zdarma. Níže uvedené ceny proto slouží jako orientační pro předběžnou představu objednatele.</p>
       </div>
       <div class="service_container">
-        <div class="carousel-wrap ">
-          <div class="service_owl-carousel owl-carousel">
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s1.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Repairs
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s2.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Equipment Installation
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s3.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Wiring
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Security
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s5.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Lighting
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
+        <p>
+          <b>Rekonstrukce elektroinstalace bytu 2+1, cihlová výstavba:</b><br>
+Práce zahrnují výměnu bytové rozvodnice, nové kabelové rozvody, výměnu zásuvek, vypínačů, výchozí elektrorevizi, včetně vystavení revizní zprávy. Kabelová vedení jsou zapuštěna-zafrézována pod omítkou.<br>
+<br>
+Dle cenové nabídky<br>
+
+<br>
+<b>Rekonstrukce domovních telefonů, 6. bytových jednotek, 1x vstupní audio tablo, analogový systém, přímá volba tlačítky:</b><br>
+Systém sestavený z 6.domácích telefonů a 1.vstupního audiopanelu - tabla, přímá volba tlačítky se jmenovkou.<br>
+<br>
+Dle cenové nabídky<br>
+
+<br>
+<b>Rekonstrukce domovních telefonů, 18. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy:</b><br>
+Systém sestavený z 18.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas nebo Rfid.<br>
+<br>
+Dle cenové nabídky<br>
+
+<br>
+<b>Rekonstrukce domovních telefonů, 60. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy:</b><br>
+Digitální systém sestavený z 60.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas, nebo Rfid.<br>
+<br>
+Dle cenové nabídky<br>
+
+<br>
+<b>Elektronický zabezpečovací systém byt 3+1:</b><br>
+Systém drátový sestávající se z detektorů pohybu, klávesnice ovládající systém, sirény a ústředny s vestavěným GSM komunikátorem umožňujícím hlášením alarmů na mobilní telefon.<br>
+<br>
+Dle cenové nabídky<br>
+
+<br>
+<b>Elektronický zabezpečovací systém byt 3+1, bezdrátová technologie:</b><br>
+Systém stejný jako předchozí jen sestavený na bezdrátové komunikaci, vhodný především tam, kde nelze provádět stavební zásahy spojené s instalací kabelů. Systém je šetrný k Vašemu interiéru.<br>
+<br>
+Dle cenové nabídky<br>
+        </p>
       </div>
     </div>
   </section>
