--- a/cenik.html
+++ b/cenik.html
@@ -88,42 +88,47 @@
           Jednotlivé zakázky jsou naceňovány individuálně podle rozsahu provedených prací, použitých materiálů a požadavků zákazníka. Cenovou nabídku vypracujeme nazávazně a zdarma. Níže uvedené ceny proto slouží jako orientační pro předběžnou představu objednatele.</p>
       </div>
       <div class="service_container">
-        <p>
-          <b>Rekonstrukce elektroinstalace bytu 2+1, cihlová výstavba:</b><br>
-Práce zahrnují výměnu bytové rozvodnice, nové kabelové rozvody, výměnu zásuvek, vypínačů, výchozí elektrorevizi, včetně vystavení revizní zprávy. Kabelová vedení jsou zapuštěna-zafrézována pod omítkou.<br>
-<br>
-Dle cenové nabídky<br>
-
-<br>
-<b>Rekonstrukce domovních telefonů, 6. bytových jednotek, 1x vstupní audio tablo, analogový systém, přímá volba tlačítky:</b><br>
-Systém sestavený z 6.domácích telefonů a 1.vstupního audiopanelu - tabla, přímá volba tlačítky se jmenovkou.<br>
-<br>
-Dle cenové nabídky<br>
-
-<br>
-<b>Rekonstrukce domovních telefonů, 18. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy:</b><br>
-Systém sestavený z 18.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas nebo Rfid.<br>
-<br>
-Dle cenové nabídky<br>
-
-<br>
-<b>Rekonstrukce domovních telefonů, 60. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy:</b><br>
-Digitální systém sestavený z 60.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas, nebo Rfid.<br>
-<br>
-Dle cenové nabídky<br>
-
-<br>
-<b>Elektronický zabezpečovací systém byt 3+1:</b><br>
-Systém drátový sestávající se z detektorů pohybu, klávesnice ovládající systém, sirény a ústředny s vestavěným GSM komunikátorem umožňujícím hlášením alarmů na mobilní telefon.<br>
-<br>
-Dle cenové nabídky<br>
-
-<br>
-<b>Elektronický zabezpečovací systém byt 3+1, bezdrátová technologie:</b><br>
-Systém stejný jako předchozí jen sestavený na bezdrátové komunikaci, vhodný především tam, kde nelze provádět stavební zásahy spojené s instalací kabelů. Systém je šetrný k Vašemu interiéru.<br>
-<br>
-Dle cenové nabídky<br>
-        </p>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Služba</th>
+              <th scope="col">Popis</th>
+              <th scope="col">Cena</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Rekonstrukce elektroinstalace bytu 2+1, cihlová výstavba</td>
+              <td>Práce zahrnují výměnu bytové rozvodnice, nové kabelové rozvody, výměnu zásuvek, vypínačů, výchozí elektrorevizi, včetně vystavení revizní zprávy. Kabelová vedení jsou zapuštěna-zafrézována pod omítkou.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+            <tr>
+              <td>Rekonstrukce domovních telefonů, 6. bytových jednotek, 1x vstupní audio tablo, analogový systém, přímá volba tlačítky</td>
+              <td>Systém sestavený z 6.domácích telefonů a 1.vstupního audiopanelu - tabla, přímá volba tlačítky se jmenovkou.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+            <tr>
+              <td>Rekonstrukce domovních telefonů, 18. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy</td>
+              <td>Systém sestavený z 18.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas nebo Rfid.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+            <tr>
+              <td>Rekonstrukce domovních telefonů, 60. bytových jednotek, 1x vstupní audio tablo s číselnou klávesnicí, digitální systém, volba a otevírání vchodových dveří kódovou číselnou klávesnicí případně Dallas nebo Rfid čipy</td>
+              <td>Digitální systém sestavený z 60.domácích telefonů a 1.vstupního digitalního tabla s číselnou kódovou klávesnicí, případně s vestavěnou čtečkou čipů Dallas, nebo Rfid.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+            <tr>
+              <td>Elektronický zabezpečovací systém byt 3+1</td>
+              <td>Systém drátový sestávající se z detektorů pohybu, klávesnice ovládající systém, sirény a ústředny s vestavěným GSM komunikátorem umožňujícím hlášením alarmů na mobilní telefon.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+            <tr>
+              <td>Elektronický zabezpečovací systém byt 3+1, bezdrátová technologie</td>
+              <td>Systém stejný jako předchozí jen sestavený na bezdrátové komunikaci, vhodný především tam, kde nelze provádět stavební zásahy spojené s instalací kabelů. Systém je šetrný k Vašemu interiéru.</td>
+              <td>Dle cenové nabídky</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </section>
