Fixed the space in ico number and text area validation.

--- a/cenik.html
+++ b/cenik.html
@@ -85,7 +85,7 @@
           Ceník
         </h2>
         <p class="col-lg-8 px-0">
-          Jednotlivé zakázky jsou naceňovány individuálně podle rozsahu provedených prací, použitých materiálů a požadavků zákazníka. Cenovou nabídku vypracujeme nazávazně a zdarma. Níže uvedené ceny proto slouží jako orientační pro předběžnou představu objednatele.</p>
+          Jednotlivé zakázky jsou naceňovány individuálně podle rozsahu provedených prací, použitých materiálů a požadavků zákazníka. Cenovou nabídku vypracujeme nazávazně a zdarma.</p>
       </div>
       <div class="service_container">
         <div class="container">
@@ -177,7 +177,7 @@
               </p>
               <p>
                 IČ: 66714699<br>
-                DIČ: CZ 6807080599
+                DIČ: CZ6807080599
               </p>
             </div>
           </div>
