--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="form-group col">
                   <textarea type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required
                   oninvalid="this.setCustomValidity('Napište zprávu nebo otázku')"
-                  oninput="this.setCustomValidity('')"> </textarea>
+                  oninput="this.setCustomValidity('')"></textarea>
                 </div>
               </div>
               <div class="btn_box">
@@ -306,7 +306,7 @@
               </p>
               <p>
                 IČ: 66714699<br>
-                DIČ: CZ 6807080599
+                DIČ: CZ6807080599
               </p>
             </div>
           </div>
