--- a/kontakt.html
+++ b/kontakt.html
@@ -92,7 +92,7 @@
                         <br> Svojsíkova 1594/6
                         <br> 708 00 Ostrava-Poruba
                         <br> IČ: 66714699
-                        <br> DIČ: CZ 6807080599
+                        <br> DIČ: CZ6807080599
                         <br>
                         <abbr title="Telefon"></abbr><a href="tel:+420604763257">+420 603 788 636</a>
                     </address>
@@ -143,9 +143,7 @@
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <textarea  type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required
-                  oninvalid="this.setCustomValidity('Napište zprávu nebo otázku')"
-                  oninput="this.setCustomValidity('')"> </textarea>
+                  <textarea type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required oninvalid="this.setCustomValidity('Napište zprávu nebo otázku')" oninput="this.setCustomValidity('')"></textarea>
                 </div>
               </div>
               <div class="btn_box">
@@ -200,7 +198,7 @@
               </p>
               <p>
                 IČ: 66714699<br>
-                DIČ: CZ 6807080599
+                DIČ: CZ6807080599
               </p>
             </div>
           </div>
