--- a/sluzby.html
+++ b/sluzby.html
@@ -235,7 +235,7 @@
               </p>
               <p>
                 IČ: 66714699<br>
-                DIČ: CZ 6807080599
+                DIČ: CZ6807080599
               </p>
             </div>
           </div>
