--- a/o_firme.html
+++ b/o_firme.html
@@ -158,7 +158,7 @@
               </p>
               <p>
                 IČ: 66714699<br>
-                DIČ: CZ 6807080599
+                DIČ: CZ6807080599
               </p>
             </div>
           </div>
