Worked through the services page.

--- a/sluzby.html
+++ b/sluzby.html
@@ -79,117 +79,218 @@
   <!-- service section -->
 
   <section class="service_section layout_padding">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-7">
-          <div class="detail-box pr-md-2">
-            <div class="heading_container">
-              <h2 class="">
-                Naše služby
-              </h2>
-            </div>
-
-
-        <p class="col-lg-8 px-0">
-          Především se zaměřujeme na:
+    <div class="container-fluid">
+      <div class="heading_container heading_center">
+        <h2>
+          Naše služby
+        </h2>
+        <p>
+          Zaměřujeme se především na elektroinstalace v domovní a bytové výstavbě včetně instalací a oprav domácích telefonů a zvonků.
         </p>
-        <ul class="detail_p_mt">
-          <li>elektroinstalace jak v novostavbách tak v stávajících objektech</li>
-          <li>rekonstrukce stávajících elektrorozvodů, úpravy instalací</li>
-          <li>montáže, údržbu, úpravy, změny a opravy elektrorozvodů</li>
-          <li>domácí telefony, instalace, opravy, rekonstrukce původních systémů</li>
-          <li>alarmy - elektronické zabezpečovací signalizace EZS</li>
-          <li>revize elektro</li>
-          <li>zámečnické práce drobného charakteru</li>
-        </ul>
-        V objektech:
-        <ul class="detail_p_mt">
-          <li>rodinné domy</li>
-          <li>byty</li>
-          <li>rekreační objekty</li>
-          <li>obchodní a firemní prostory</li>
-          <li>kancelářské objekty</li>
-          <li>parkovací prostory</li>
-        </ul>
-        Rozsah činnosti:
-        <ul class="detail_p_mt">
-          <li>elektroinstalace rodinných domů , bytů, chat, provozoven, kanceláří a podobných objektů</li>
-          <li>elektropráce v bytových jádrech, kuchyních a jiných prostor při jejich rekonstrukcích, úpravách, nebo změnách dispozic</li>
-          <li>výměna starých hliníkových rozvodů za měděné, dle platných norem</li>
-          <li>vyhledávání a odstraňování poruch v elektrorozvodech</li>
-          <li>výměna rozváděčů, jističů, zásuvek, vypínačů, svítidel a ostatních elektrozařízení</li>
-          <li>přemístění , změny a doplnění zásuvkových, světelných a jiných obvodů</li>
-          <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
-          <li>připojení elektrospotřebičů, svítidel a ostatních elektrozařízení</li>
-          <li>zafrézování kabelů do panelu a zasekání nebo odvrtání vypínačů i zásuvek do zdiva a jiných stavebních materiálů za použití profesionálního nářadí s odsáváním prachu</li>
-          <li>instalace, opravy zvonkových tabel, zvonkových rozvodů a systémů domácích telefonů</li>
-          <li>montáž a připojení světelných reklam a poutačů</li>
-          <li>opravy a údržba elektroinstalace</li>
-          <li>automatické osvětlení společných prostor obytných domů, pohybové senzory - čidla</li>
-          <li>rekonstrukce osvětlení a elektroinstalací společných prostor obytných domů</li>
-          <li>slaboproudé a datové rozvody</li>
-          <li>instalace elektronických zabezpečovacích systémů - alarmů</li>
-          <li>certifikace pro montáž alarmů a ostatních zařízení dodavatelských firem Jablotron Alarms a.s., Paradox</li>
-          <li>revize elektro, jak výchozí tak periodické</li>
-          <li>drobné zámečnické práce</li>
-        </ul>
       </div>
-
+      <div class="service_container">
+              <div class="container">
+                <div class="row">
+                    <div class="item col-md-3">
+                      <a href="sluzby.html#home_phones">
+                        <div class="box ">
+                          <div class="img-box">
+                            <img src="images/s1.png" alt="" />
+                          </div>
+                          <div class="detail-box">
+                            <h5>
+                              Domácí telefony
+                            </h5>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                  <div class="item col-md-3">
+                    <a href="sluzby.html#elektroinstallation">
+                      <div class="box ">
+                        <div class="img-box">
+                          <img src="images/s2.png" alt="" />
+                        </div>
+                        <div class="detail-box">
+                          <h5>
+                            Elektroinstalace
+                          </h5>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="item col-md-3">
+                    <a href="sluzby.html#alarms">
+                      <div class="box ">
+                        <div class="img-box">
+                          <img src="images/s3.png" alt="" />
+                        </div>
+                        <div class="detail-box">
+                          <h5>
+                            Alarmy
+                          </h5>
+                        </div>
+                      </div>
+                    </a>
+                  </div><div class="item col-md-3">
+                    <a href="sluzby.html#other">
+                      <div class="box ">
+                        <div class="img-box">
+                          <img src="images/s3.png" alt="" />
+                        </div>
+                        <div class="detail-box">
+                          <h5>
+                            Jiné služby
+                          </h5>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
     </div>
   </div>
     </div>
   </section>
 
-  <section id="home_phones" class="layout_padding">
+  <section id="home_phones" class="layout_padding-bottom">
     <div class="container-fluid">
       <div class="heading_container heading_center ">
         <h2 class="">
           Domácí telefony
         </h2>
-        <p class="col-lg-8 px-0">
-          Blabla telefony
-        </p>
       </div>
+          <div class="container">
+            <ul class="detail_p_mt ">
+              <li>Instalace, opravy zvonkových tabel, zvonkových rozvodů a systémů domácích telefonů</li>
+              <li>Rekonstrukce původních systémů</li>
+            </ul>
+                <div class="heading_container">
+                  <h5 class="">
+                    Ukázka digitálního systému DT, řady CD 2502
+                  </h5>
+                </div>
+                
+            <div class="row">
+              <div class="col-md-4 col-lg-4">
+                <div class="img-box">
+                  <img src="images/tablo1.png" class="img-fluid" alt="" />
+                </div>
+              </div>
+              <div class="col-md-8 col-lg-8">
+                  <p>
+                    Tablo s kódovou klávesnicí v provedení antivandal, masivní odolná kovová konstrukce, 
+                    kvalitní povrchová úprava, moderní design. Barevné provedení - černá, hnědá, stříbrná. 
+                    Možnost montáže jak pod, tak na omítku, zdivo.
+                    Možnost ovládání otevírání vstupních dveří číselným kódem, dotykovými čipy Dallas, 
+                    nebo bezdotykovými Rfid. Podsvětlený seznam uživatelů i číselé klávesnice. 
+                    Velký, dobře čitelný displej i v noci, pro zobrazení volby bytu a funkcí systému. 
+                    Snadné ovládání. Kvalitní zvuk. Možnost vícevchodové aplikace.
+                  </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 col-lg-4">
+                <div class="img-box">
+                  <img src="images/tablo2.png" class="img-fluid" alt="" />
+                </div>
+              </div>
+              <div class="col-md-8 col-lg-8">
+                  <p>
+                    Tablo v provedení s nerezovým čelním panelem. Provedení pro zapuštěnou montáž, pod omítku.
+                    Technické vlastnosti jako výše uvedený systém.
+                  </p>
+              </div>
+            </div>
+          </div>
     </div>
   </section>
 
-  <section id="elektroinstallation" class="layout_padding">
+  <section id="elektroinstallation" class="layout_padding-bottom">
     <div class="container-fluid">
       <div class="heading_container heading_center ">
         <h2 class="">
           Elektroinstalace
         </h2>
-        <p class="col-lg-8 px-0">
-          Blabla instalace
-        </p>
       </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="img-box">
+                <img src="images/installation-img.jpg" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-md-8 col-lg-8">
+              <ul class="detail_p_mt ">
+                <li>Elektroinstalace rodinných domů , bytů, chat, provozoven, kanceláří a podobných objektů</li>
+                <li>Elektropráce v bytových jádrech, kuchyních a jiných prostor při jejich rekonstrukcích, úpravách, nebo změnách dispozic</li>
+                <li>Výměna starých hliníkových rozvodů za měděné, dle platných norem</li>
+                <li>Vyhledávání a odstraňování poruch v elektrorozvodech</li>
+                <li>Výměna rozváděčů, jističů, zásuvek, vypínačů, svítidel a ostatních elektrozařízení</li>
+                <li>Přemístění, změny a doplnění zásuvkových, světelných a jiných obvodů</li>
+                <li>Připojení elektrospotřebičů, svítidel a ostatních elektrozařízení</li>
+                <li>Zafrézování kabelů do panelu a zasekání nebo odvrtání vypínačů i zásuvek do zdiva a jiných stavebních materiálů za použití profesionálního nářadí s odsáváním prachu</li>
+                <li>Montáž a připojení světelných reklam a poutačů</li>
+                <li>Automatické osvětlení společných prostor obytných domů, pohybové senzory - čidla</li>
+                <li>Rekonstrukce osvětlení a elektroinstalací společných prostor obytných domů</li>
+                <li>Slaboproudé a datové rozvody</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 
-  <section id="alarms" class="layout_padding">
+  <section id="alarms" class="layout_padding-bottom">
     <div class="container-fluid">
       <div class="heading_container heading_center ">
         <h2 class="">
           Alarmy
         </h2>
-        <p class="col-lg-8 px-0">
-          Blabla alarmy
-        </p>
       </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="img-box">
+                <img src="images/alarm-img.jpg" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-md-8 col-lg-8">
+              <ul class="detail_p_mt ">
+                <li>Instalace elektronických zabezpečovacích systémů - alarmů</li>
+                <li>Elektronické zabezpečovací signalizace EZS</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 
-  <section id="other" class="layout_padding">
+  <section id="other" class="layout_padding-bottom">
     <div class="container-fluid">
       <div class="heading_container heading_center ">
         <h2 class="">
           Jiné služby
         </h2>
-        <p class="col-lg-8 px-0">
-          Blabla ostatní
-        </p>
+        
       </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="img-box">
+                <img src="images/locker-img.jpg" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-md-8 col-lg-8 justify-content-end">
+              <ul class="detail_p_mt ">
+                <li>Certifikace pro montáž alarmů a ostatních zařízení dodavatelských firem Jablotron Alarms a.s., Paradox</li>
+                <li>Revize elektro, jak výchozí tak periodické</li>
+                <li>Drobné zámečnické práce</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 
