--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="heading_container heading_center">
               <h2>Napište nám</h2>
             </div>
-            <form action="https://formsubmit.co/anastasiyasergeevnap@gmail.com" method="POST">
+            <form action="https://formsubmit.co/elmechanic@seznam.cz" method="POST">
               <div class="form-row">
                 <div class="form-group col-lg-6">
                   <input type="text" name="Jméno" class="form-control" placeholder="Vaše jméno" required
