--- a/kontakt.html
+++ b/kontakt.html
@@ -121,7 +121,7 @@
               <h2>Napište nám</h2>
             </div>
             
-            <form action="https://formsubmit.co/anastasiyasergeevnap@gmail.com" method="POST">
+            <form action="https://formsubmit.co/elmechanic@seznam.cz" method="POST">
               <div class="form-row">
                 <div class="form-group col-lg-6">
                   <input type="text" name="Jméno" class="form-control" placeholder="Vaše jméno" required
